# repa

./: .authorspellings  .gitignore  .travis.yml  Makefile  README.md  RELEASE-CHECKLIST.md  bench.sh  cabal.project  stack-7.10.yaml  stack-8.0.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack.yaml
examples/: LICENSE  repa-examples.cabal
examples/FFT/src/: DFT.hs  FFT.hs  Main.hs  Roots.hs  StrictComplex.hs
examples/FFT/src/FFT2d/: Main.hs
examples/FFT/src/HighPass/: Main.hs
examples/FFT/src/old/: FFTCArray.hs
examples/Fluid/legacy/: demo.c
examples/Laplace/data/: pls-100x100.pxm
examples/Laplace/legacy/: Main.c
examples/Laplace/src/: Main.hs  SolveArray.hs  SolveCArray.hs  SolveCArrayFlatDim.hs  SolveDArray.hs  SolveMArray.hs  Solver.hs
examples/MMult/data/: id-10x10.mat
examples/MMult/legacy/: Main.c
examples/MMult/src/: Main.hs  SolveCArray.hs  SolveDArray.hs  Solver.hs
examples/lib/: BMP.hs  ColorRamp.hs  Matrix.hs  PPM.hs  StrictComplex.hs  Vector.hs
examples/libc/: ColorRamp.c
icebox/deprecated/repa-bytestring/: repa-bytestring.cabal
io/: repa-io.cabal
repa/: LICENSE  Test.hs  repa.cabal
repa-algorithms/: repa-algorithms.cabal
repa-array/: LICENSE  repa-array.cabal
repa-array/Data/Repa/: Array.hs  Nice.hs
repa-array/Data/Repa/Array/: Auto.hs  Boxed.hs  Checked.hs  Default.hs  Delayed.hs  Delayed2.hs  Dense.hs  Foreign.hs  Generic.hs  Index.hs  Linear.hs  Material.hs  Meta.hs  RowWise.hs  Shape.hs  Tuple.hs  Unboxed.hs  Unsafe.hs  Window.hs
repa-array/Data/Repa/Bits/: Date32.hs
repa-array/Data/Repa/Eval/: Array.hs  Chain.hs  Stream.hs
repa-array/Data/Repa/Fusion/: Unpack.hs
repa-array/Data/Repa/IO/: Array.hs  Convert.hs  File.hs
repa-array/Data/Repa/Nice/: Display.hs  Present.hs  Tabulate.hs
repa-binary/: repa-binary.cabal
repa-binary/Data/Repa/Binary/: Format.hs  Packable.hs  Product.hs
repa-bot/: repa-bot.cabal
repa-bot/src/: Args.hs  Benchmarks.hs  BuildDPH.hs  BuildGhc.hs  BuildLibs.hs  BuildRepa.hs  BuildTest.hs  Config.hs  Main.hs
repa-bot/src/old/: BuildDPH.hs  BuildRepa.hs
repa-bulk/: repa-bulk.cabal
repa-bytestring/: repa-bytestring.cabal
repa-convert/: LICENSE  repa-convert.cabal
repa-convert/Data/Repa/: Convert.hs  Product.hs
repa-convert/include/: repa-convert.h
repa-core/: repa-core.cabal
repa-eval/: repa-eval.cabal
repa-examples/: LICENSE  Makefile  repa-examples.cabal
repa-examples/Benchmark/src/: Config.hs  Main.hs  Run.hs
repa-examples/Blur/src/: Main.hs
repa-examples/EdgeDetect/opencv/: Main.cpp
repa-examples/EdgeDetect/src/: Main.hs
repa-examples/FFT/legacy/: BMP.c  FFTW.c  Jones.c  Main.c  Makefile
repa-examples/Laplace/legacy/: Makefile
repa-examples/Laplace/src/: Main.hs  Solver.hs  SolverGet.hs  SolverStencil.hs
repa-examples/MDim/: MDim.hs
repa-examples/MMult/legacy/: Main.c
repa-examples/MMult/src/: Main.hs
repa-examples/broken/MDim/: MDim.hs
repa-examples/examples/Crystal/: Main.hs
repa-examples/examples/PageRank/: Count.hs  GrowBuffer.hs  LICENSE  Main.hs  Page.hs  Progress.hs  Rank.hs  Step.hs  Test.hs  pagerank.cabal
repa-examples/examples/QuickHull/: Main.hs  Points.hs  SVG.hs  Solver.hs  Solver4.hs  SolverChunks.hs
repa-examples/examples/QuickSelect/: Solver.hs  Test.hs
repa-examples/examples/SMVM/: Main.hs  Solver.hs  Test.hs
repa-examples/examples/ThreadLocal/: Main.hs
repa-examples/examples/UnitTesting/: UnitTesting.hs
repa-examples/examples/Volume/: Main.hs
repa-examples/lib/: Timing.hs
repa-examples/libc/: ColorRamp.h  Matrix.c  Matrix.h  Timing.c  Timing.h
repa-flow/: Makefile  NOTES  repa-flow.cabal
repa-flow/Data/Repa/: Flow.hs  Flows.hs
repa-flow/examples/00-Start/: Main.hs
repa-flow/examples/01-Copy/: Main.hs
repa-flow/examples/02-Fields/: Main.hs
repa-flow/examples/03-GroupSum/: Main.hs
repa-flow/examples/04-Shuffle/: Main.hs
repa-flow/examples/05-Sieve/: Config.hs
repa-flow/examples/Copy/: Main.hs
repa-flow/examples/Fields/: Main.hs
repa-flow/examples/GroupSum/: Convert.hs  Main.hs
repa-flow/icebox/: DirectFlow.hs
repa-flow/test/fusion/: Test.hs  TestCo.hs  TestPar.hs  TestSeq.hs
repa-flow/test/props/: Test.hs  TestPar.hs  TestSeq.hs
repa-flow/test/seq/: Unboxed.hs
repa-flow/tutorial/: 00-GettingStarted.ipynb
repa-io/: repa-io.cabal
repa-machine/: repa-machine.cabal
repa-machine/Data/Repa/: Machine.hs
repa-machine/example/: Map.hs
repa-plugin/: repa-plugin.cabal
repa-plugin/test/01-Fold/: Fold.hs  Main.hs
repa-plugin/test/01-Simple/: Main.hs
repa-plugin/test/02-Opaque/: Main.hs
repa-plugin/test/02-Tuple/: Main.hs  Tuple.hs
repa-plugin/test/03-Opaque/: Main.hs  Opaque.hs
repa-plugin/test/03-Pack/: Pack.hs
repa-plugin/test/03-Prims/: Main.hs
repa-plugin/test/04-Pack/: Main.hs  Pack.hs
repa-plugin/test/04-Prims/: Main.hs
repa-plugin/test/05-Quicksort/: Quicksort.hs
repa-plugin/test/07-SimpleBench/: Bench_MapMap.hs  Bench_Points.hs  Bench_QuickHull.hs
repa-plugin/test/10-Pack/: Main.hs
repa-plugin/test/20-Vector/: Main.hs
repa-query/: repa-query.cabal
repa-query/Data/Repa/: Query.hs
repa-query/test/: Test.hs
repa-repr/: repa-repr.cabal
repa-repr/Data/Array/: Repa.hs
repa-repr/examples/Laplace/: SolverGet.hs
repa-repr/examples/Sobel/: Solver.hs
repa-scalar/: repa-scalar.cabal
repa-series/: LICENSE  repa-series.cabal
repa-store/: repa-store.cabal
repa-store/include/: repa-store.h
repa-stream/: repa-stream.cabal
repa-stream/Data/Repa/: Chain.hs  Option.hs  Stream.hs
repa-stream/scratch/: Stream.hs
repa-stream/test/fusion/: Map.hs  Replicate.hs
repa-tools/: repa-tools.cabal
repa-tools/tools/fields/: Config.hs  Main.hs
repa-tools/tools/sieve/: Config.hs  Main.hs
repa-tools/tools/tags/: Config.hs  Main.hs
repa-vector/: repa-vector.cabal
repa-vector/Data/Vector/: Repa.hs
repa-vector/fusion/: ChainChunk.hs  ChainSeq.hs
repa-vector/old/cuts/: Unboxed.hs  Vector.hs
repa-vector/test/: Test.hs  compile-test
repa-vector/test/props/: Test.hs
repa/Data/Array/: Repa.hs
repa/examples/Sobel/: Solver.hs
(+808 files in other folders)
