Name:                repa-examples
Version:             1.0.0.0
License:             MIT
Author:              The DPH Team
Maintainer:          ndp@cse.unsw.edu.au
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Data Structures
Homepage:            http://trac.haskell.org/repa
Bug-reports:         http://trac.haskell.org/repa/newticket
Description:
        Examples using the Repa array library.

Synopsis:
        Examples using the Repa array library.


Executable repa-laplace
  Build-depends: 
        base            >= 3   && < 5, 
        random          >= 1.0 && < 1.1,
        bytestring      >= 0.9 && < 1.0,
        dph-prim-par    >= 0.4 && < 0.5,
        repa            >= 1.0 && < 1.1

  Main-is: Laplace/src/Main.hs
  other-modules: Solver
  hs-source-dirs: Laplace/src . lib
  ghc-options: -Odph -threaded 


Executable repa-mmult
  Build-depends: 
        base            >= 3   && < 5, 
        random          >= 1.0 && < 1.1,
        bytestring      >= 0.9 && < 1.0,
        dph-prim-par    >= 0.4 && < 0.5,
        repa            >= 1.0 && < 1.1

  Main-is: MMult/src/Main.hs
  hs-source-dirs: MMult/src . lib
  ghc-options: -Odph -threaded 


Executable repa-fft
  Build-depends: 
        base            >= 3   && < 5, 
        random          >= 1.0 && < 1.1,
        bytestring      >= 0.9 && < 1.0,
        dph-prim-par    >= 0.4 && < 0.5,
        dph-base        >= 0.4 && < 0.5,
        repa            >= 1.0 && < 1.1

  Main-is: FFT/src/Main.hs
  hs-source-dirs: FFT/src . lib
  ghc-options: -Odph -threaded 


