Name:                repa-algorithms
Version:             3.2.2.3
License:             BSD3
License-file:        LICENSE
Author:              The DPH Team
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Data Structures
Homepage:            http://repa.ouroborus.net
Bug-reports:         repa@ouroborus.net
Description:
        Reusable algorithms using the Repa array library.

Synopsis:
        Algorithms using the Repa array library.

Library
  Build-Depends: 
        base                 == 4.6.*,
        vector               == 0.10.*,
        repa                 == 3.2.*

  ghc-options:
        -Wall -fno-warn-missing-signatures
        -Odph
        -fno-liberate-case
        -fsimplifier-phases=4
        -funfolding-use-threshold=1000
        -funfolding-keeness-factor=1000
        -funbox-strict-fields
        -fcpr-off

  extensions:
        NoMonomorphismRestriction
        ExplicitForAll
        EmptyDataDecls
        BangPatterns
        TypeFamilies
        MultiParamTypeClasses
        FlexibleInstances
        FlexibleContexts
        StandaloneDeriving
        ScopedTypeVariables
        PatternGuards
        OverlappingInstances

  Exposed-modules:
        Data.Array.Repa.Algorithms.DFT.Center
        Data.Array.Repa.Algorithms.DFT.Roots
        Data.Array.Repa.Algorithms.ColorRamp
        Data.Array.Repa.Algorithms.Complex
        Data.Array.Repa.Algorithms.Convolve
        Data.Array.Repa.Algorithms.DFT
        Data.Array.Repa.Algorithms.FFT
        Data.Array.Repa.Algorithms.Matrix
        Data.Array.Repa.Algorithms.Pixel
        Data.Array.Repa.Algorithms.Randomish
