Name:                repa-algorithms
Version:             3.4.1.5
License:             BSD3
License-file:        LICENSE
Author:              The DPH Team
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.10
Stability:           experimental
Category:            Data Structures
Homepage:            http://repa.ouroborus.net
Bug-reports:         http://groups.google.com/d/forum/haskell-repa
Description:
        Reusable algorithms using the Repa array library.

Synopsis:
        Algorithms using the Repa array library.

Library
  Build-Depends:
        base                 >= 4.8 && < 5
      , vector               >= 0.11 && < 0.13
      , repa                 == 3.4.1.*

  ghc-options:
        -Wall
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=4
        -funbox-strict-fields
        -fno-liberate-case
        -fno-warn-missing-signatures
        -funfolding-keeness-factor=1000
        -funfolding-use-threshold=1000

  if impl(ghc >= 8.0)
    ghc-options: -fno-cpr-anal
  else
    ghc-options: -fcpr-off

  default-language:
        Haskell2010

  default-extensions:
        NoMonomorphismRestriction
        ExplicitForAll
        EmptyDataDecls
        BangPatterns
        TypeFamilies
        MultiParamTypeClasses
        FlexibleInstances
        FlexibleContexts
        StandaloneDeriving
        ScopedTypeVariables
        PatternGuards

  Exposed-modules:
        Data.Array.Repa.Algorithms.DFT.Center
        Data.Array.Repa.Algorithms.DFT.Roots
        Data.Array.Repa.Algorithms.ColorRamp
        Data.Array.Repa.Algorithms.Complex
        Data.Array.Repa.Algorithms.Convolve
        Data.Array.Repa.Algorithms.DFT
        Data.Array.Repa.Algorithms.FFT
        Data.Array.Repa.Algorithms.Matrix
        Data.Array.Repa.Algorithms.Pixel
        Data.Array.Repa.Algorithms.Randomish

-- vim: nospell
