Name:           repa-array
Version:        4.0.0.0
License:        BSD3
License-file:   LICENSE
Author:         The DPH Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:
        Bulk array representations and operators.

Synopsis:
        Bulk array representations and operators.

Library
  build-Depends: 
        base               == 4.7.*,
        primitive          == 0.5.*,
        vector             == 0.10.*,
        bytestring         == 0.10.*,
        mtl                == 2.2.*,
        double-conversion  == 2.0.*,
        text               == 1.2.*,
        repa-eval          == 4.0.0.0,
        repa-stream        == 4.0.0.0


  exposed-modules:
        Data.Repa.Array.Material.Safe.Boxed
        Data.Repa.Array.Material.Safe.Unboxed
        Data.Repa.Array.Material.Safe.Foreign
        Data.Repa.Array.Material.Safe

        Data.Repa.Array.Material.Unsafe.Boxed
        Data.Repa.Array.Material.Unsafe.Unboxed
        Data.Repa.Array.Material.Unsafe.Foreign
        Data.Repa.Array.Material.Unsafe.Nested
        Data.Repa.Array.Material.Unsafe

        Data.Repa.Array.Checked
        Data.Repa.Array.Delayed
        Data.Repa.Array.Window

        Data.Repa.Array.Shape.Slice
        Data.Repa.Array.Shape.Index
        Data.Repa.Array.Shape.Base
        Data.Repa.Array.Shape
        Data.Repa.Array

        Data.Repa.Eval.Array
        Data.Repa.Eval.Chain
        Data.Repa.Eval.Stream

        Data.Repa.Fusion.Unpack

        Data.Repa.IO.Array
        Data.Repa.IO.Convert

        Data.Repa.Nice
        Data.Repa.Nice.Display
        Data.Repa.Nice.Tabulate
        Data.Repa.Nice.Present
        
  other-modules:
        Data.Repa.Array.Internals.Operator.Concat
        Data.Repa.Array.Internals.Operator.Fold
        Data.Repa.Array.Internals.Operator.Group
        Data.Repa.Array.Internals.Bulk
        Data.Repa.Array.Internals.Load
        Data.Repa.Array.Internals.Target

        Data.Repa.Array.Material.Safe.Base
        Data.Repa.Array.Material.Unsafe.Base


  ghc-options:
        -Wall -fno-warn-missing-signatures
        -O2
        -fcpr-off
        -funbox-strict-fields

  extensions:
        CPP
        BangPatterns
        NoMonomorphismRestriction
        RankNTypes
        MagicHash
        UnboxedTuples
        ScopedTypeVariables
        PatternGuards
        FlexibleInstances
        FlexibleContexts
        TypeOperators
        TypeFamilies
        DefaultSignatures
        MultiParamTypeClasses
        EmptyDataDecls
        StandaloneDeriving
        FunctionalDependencies
        ConstraintKinds
        ForeignFunctionInterface


