Name:           repa-array
Version:        4.1.0.1
License:        BSD3
License-file:   LICENSE
Author:         The Repa Development Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:
        NOTE: This is an ALPHA version of Repa 4. The API is not yet complete with
        respect to Repa 3. Some important functions are still missing, and the docs
        may not be up-to-date.

Synopsis:
        Bulk array representations and operators.

source-repository head
  type:     git
  location: https://github.com/DDCSF/repa.git

Library
  build-Depends: 
        base               == 4.7.*,
        primitive          == 0.5.*,
        vector             == 0.10.*,
        bytestring         == 0.10.*,
        mtl                == 2.2.*,
        double-conversion  == 2.0.*,
        text               == 1.2.*,
        repa-eval          == 4.0.0.*,
        repa-stream        == 4.1.0.*,
        repa-convert       == 4.1.0.*


  exposed-modules:
        Data.Repa.Array.Auto
        Data.Repa.Array.Auto.IO
        Data.Repa.Array.Auto.Convert
        Data.Repa.Array.Auto.Unpack

        Data.Repa.Array.Generic.Convert
        Data.Repa.Array.Generic.Index
        Data.Repa.Array.Generic.Load
        Data.Repa.Array.Generic.Slice
        Data.Repa.Array.Generic.Target
        Data.Repa.Array.Generic

        Data.Repa.Array.Material.Auto
        Data.Repa.Array.Material.Boxed
        Data.Repa.Array.Material.Foreign
        Data.Repa.Array.Material.Strided
        Data.Repa.Array.Material.Nested
        Data.Repa.Array.Material.Unboxed
        Data.Repa.Array.Material

        Data.Repa.Array.Meta.Delayed
        Data.Repa.Array.Meta.Delayed2
        Data.Repa.Array.Meta.Dense
        Data.Repa.Array.Meta.Linear
        Data.Repa.Array.Meta.RowWise
        Data.Repa.Array.Meta.Tuple
        Data.Repa.Array.Meta.Window
        Data.Repa.Array.Meta

        Data.Repa.Bits.Date32

        Data.Repa.Eval.Chain
        Data.Repa.Eval.Stream

        Data.Repa.Fusion.Unpack

        Data.Repa.Nice.Display
        Data.Repa.Nice.Tabulate
        Data.Repa.Nice.Present

        Data.Repa.Array
        Data.Repa.Nice
        
  other-modules:
        Data.Repa.Array.Auto.Base
        Data.Repa.Array.Auto.Operator

        Data.Repa.Array.Material.Auto.Base
        Data.Repa.Array.Material.Auto.InstFloat
        Data.Repa.Array.Material.Auto.InstInt
        Data.Repa.Array.Material.Auto.InstWord

        Data.Repa.Array.Material.Foreign.Base

        Data.Repa.Array.Internals.Operator.Concat
        Data.Repa.Array.Internals.Operator.Compact
        Data.Repa.Array.Internals.Operator.Fold
        Data.Repa.Array.Internals.Operator.Group
        Data.Repa.Array.Internals.Operator.Merge
        Data.Repa.Array.Internals.Operator.Insert
        Data.Repa.Array.Internals.Operator.Partition
        Data.Repa.Array.Internals.Operator.Reduce
        Data.Repa.Array.Internals.Operator.Filter

        Data.Repa.Array.Internals.Bulk
        Data.Repa.Array.Internals.Check
        Data.Repa.Array.Internals.Layout
        Data.Repa.Array.Internals.Load
        Data.Repa.Array.Internals.Shape
        Data.Repa.Array.Internals.Target

  include-dirs:
        include

  install-includes:
        repa-array.h

  ghc-options:
        -Wall -fno-warn-missing-signatures
        -O2

  extensions:
        CPP
        BangPatterns
        NoMonomorphismRestriction
        RankNTypes
        MagicHash
        UnboxedTuples
        ScopedTypeVariables
        PatternGuards
        FlexibleInstances
        FlexibleContexts
        TypeOperators
        TypeFamilies
        DefaultSignatures
        MultiParamTypeClasses
        EmptyDataDecls
        StandaloneDeriving
        FunctionalDependencies
        ConstraintKinds
        ForeignFunctionInterface
        ViewPatterns
        ExistentialQuantification
        InstanceSigs


