Name:           repa-bulk
Version:        4.0.0.0
License:        BSD3
License-file:   LICENSE
Author:         The DPH Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:
        Bulk array representations and operators.

Synopsis:
        Bulk array representations and operators.

Library
  build-Depends: 
        base            == 4.7.*,
        vector          == 0.10.*,
        repa-eval       == 4.0.0.0

  exposed-modules:
        Data.Array.Repa.Shape
        Data.Array.Repa.Slice
        Data.Array.Repa.Index

        Data.Array.Repa.Bulk
        Data.Array.Repa.Bulk.IO.File

        Data.Array.Repa.Repr.Delayed
        Data.Array.Repa.Repr.Unboxed
        Data.Array.Repa.Repr.Foreign

        Data.Array.Repa.Repr.Unsafe.Unboxed
        Data.Array.Repa.Repr.Unsafe.Nested
        Data.Array.Repa.Repr.Unsafe.Foreign
        Data.Array.Repa.Repr.Unsafe


  other-modules:
        Data.Array.Repa.Bulk.Base
        Data.Array.Repa.Bulk.Target
        Data.Array.Repa.Bulk.Load


  ghc-options:
        -Wall 
        -fno-warn-missing-signatures
        -O2
        -fcpr-off
        -fno-spec-constr
        -funbox-strict-fields

  extensions:
        NoMonomorphismRestriction
        BangPatterns
        MagicHash
        UnboxedTuples
        ScopedTypeVariables
        PatternGuards
        FlexibleInstances
        TypeOperators
        TypeFamilies
        FlexibleContexts
        DefaultSignatures
        MultiParamTypeClasses
        EmptyDataDecls
        StandaloneDeriving


