Name:                repa-bytestring
Version:             2.1.0.1
License:             BSD3
License-file:        LICENSE
Author:              The DPH Team
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Data Structures
Homepage:            http://repa.ouroborus.net
Bug-reports:         repa@ouroborus.net
Description:
        Conversions between Repa Arrays and ByteStrings.

Synopsis:
        Conversions between Repa Arrays and ByteStrings.

Library
  Build-Depends: 
        base                 == 4.*,
        repa                 == 2.1.*,
        vector               == 0.7.*,
        bytestring           == 0.9.*

  ghc-options:
        -Odph -Wall -fno-warn-missing-signatures

  Exposed-modules:
        Data.Array.Repa.ByteString
      
