Name:           repa-convert
Version:        4.1.0.1
License:        BSD3
License-file:   LICENSE
Author:         The Repa Development Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:    Packing and unpacking binary data.
Synopsis:       Packing and unpacking binary data.

source-repository head
  type:     git
  location: https://github.com/DDCSF/repa.git

Library
  build-Depends: 
        base              == 4.8.*,
        primitive         == 0.6.*,
        vector            == 0.10.*,
        bytestring        == 0.10.*,
        double-conversion == 2.0.*

  exposed-modules:
        Data.Repa.Bits.Date32

        Data.Repa.Convert.Default.Ascii
        Data.Repa.Convert.Numeric
        Data.Repa.Convert.Format
        Data.Repa.Convert.Formats
        Data.Repa.Convert

        Data.Repa.Singleton.Nat
        Data.Repa.Singleton.Bool

        Data.Repa.Product

  other-modules:
        Data.Repa.Convert.Format.App
        Data.Repa.Convert.Format.Base
        Data.Repa.Convert.Format.Binary
        Data.Repa.Convert.Format.Lists
        Data.Repa.Convert.Format.Fields
        Data.Repa.Convert.Format.Numeric
        Data.Repa.Convert.Format.Date32
        Data.Repa.Convert.Format.Sep


  ghc-options:
        -Wall -fno-warn-missing-signatures
        -O2

  extensions:
        CPP
        GADTs
        MagicHash
        DataKinds
        MultiWayIf
        BangPatterns
        TypeFamilies
        PatternGuards
        TypeOperators
        UnboxedTuples
        FlexibleContexts
        FlexibleInstances
        StandaloneDeriving
        ScopedTypeVariables
        MultiParamTypeClasses
        ForeignFunctionInterface
        ExistentialQuantification
        NoMonomorphismRestriction
