Name:           repa-convert
Version:        4.2.3.2
License:        BSD3
License-file:   LICENSE
Author:         The Repa Development Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:    Packing and unpacking flat tables.
Synopsis:       Packing and unpacking flat tables.

source-repository head
  type:     git
  location: https://github.com/DDCSF/repa.git

Library
  build-Depends:
        base              >= 4.9  && < 4.11,
        primitive         >= 0.6  && < 0.8,
        vector            >= 0.10 && < 0.13,
        bytestring        == 0.10.*,
        text              == 1.2.*,
        double-conversion == 2.0.*,
        repa-scalar       == 4.2.3.*

  exposed-modules:
        Data.Repa.Convert.Format
        Data.Repa.Convert.Formats
        Data.Repa.Convert

  other-modules:
        Data.Repa.Convert.Internal.Format
        Data.Repa.Convert.Internal.Packable
        Data.Repa.Convert.Internal.Packer
        Data.Repa.Convert.Internal.Unpacker

        Data.Repa.Convert.Format.Ascii
        Data.Repa.Convert.Format.App
        Data.Repa.Convert.Format.Binary
        Data.Repa.Convert.Format.Bytes
        Data.Repa.Convert.Format.Date32
        Data.Repa.Convert.Format.Fields
        Data.Repa.Convert.Format.Maybe
        Data.Repa.Convert.Format.Numeric
        Data.Repa.Convert.Format.Object
        Data.Repa.Convert.Format.Sep
        Data.Repa.Convert.Format.String
        Data.Repa.Convert.Format.Text
        Data.Repa.Convert.Format.Unit

  include-dirs:
        include

  install-includes:
        repa-convert.h

  ghc-options:
        -Wall -fno-warn-missing-signatures
        -O2

  extensions:
        CPP
        GADTs
        MagicHash
        DataKinds
        RankNTypes
        MultiWayIf
        BangPatterns
        TypeFamilies
        PatternGuards
        TypeOperators
        UnboxedTuples
        FlexibleContexts
        FlexibleInstances
        StandaloneDeriving
        ScopedTypeVariables
        MultiParamTypeClasses
        FunctionalDependencies
        ForeignFunctionInterface
        ExistentialQuantification
        NoMonomorphismRestriction
