Name:           repa-eval
Version:        4.0.0.1
License:        BSD3
License-file:   LICENSE
Author:         The Repa Development Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:    Low-level parallel operators on bulk random-accessble arrays.
Synopsis:       Low-level parallel operators on bulk random-accessble arrays.

source-repository head
  type:     git
  location: https://github.com/DDCSF/repa.git

Library
  Build-Depends: 
        base            == 4.7.*,
        ghc-prim        == 0.3.*

  Exposed-modules:
        Data.Repa.Eval.Elt
        Data.Repa.Eval.Gang
        Data.Repa.Eval.Generic.Seq
        Data.Repa.Eval.Generic.Par

  Other-modules:
        Data.Repa.Eval.Generic.Seq.Chunked
        Data.Repa.Eval.Generic.Seq.Cursored
        Data.Repa.Eval.Generic.Seq.Reduction

        Data.Repa.Eval.Generic.Par.Chunked
        Data.Repa.Eval.Generic.Par.Cursored
        Data.Repa.Eval.Generic.Par.Reduction
        Data.Repa.Eval.Generic.Par.Interleaved

  ghc-options:
        -Wall -fno-warn-missing-signatures
        -O2

  extensions:
        NoMonomorphismRestriction
        BangPatterns
        MagicHash
        UnboxedTuples
        ScopedTypeVariables
        PatternGuards
        FlexibleInstances
        TypeOperators
        FlexibleContexts
        DefaultSignatures

